# rk3588_cam

./: CMakeLists.txt  GEMINI.md  README.md  build.sh  run.sh
doc/: 数据库说明.md  框架.md  模块.md  线程架构设计.md  虚拟机环境.md  部署.md
gui/include/: cameraview.h  registration_dialog.h  usermanager_widget.h
gui/src/: cameraview.cpp  registration_dialog.cpp  usermanager_widget.cpp
include/: config.h
include/app/: app_controller.h  inference_thread.h  performance_monitor.h  postprocess_thread.h  preprocessing_thread.h
include/core/: facenet.h  model_manager.h  postprocess.h  yolov8_face.h
include/database/: attendance_dao.h  database_manager.h  database_types.h  face_feature_dao.h  user_dao.h
include/hardware/: camera_device.h
include/service/: attendance_service.h  feature_library.h
src/: main.cc
src/app/: app_controller.cc  inference_thread.cc  performance_monitor.cc  postprocess_thread.cc  preprocessing_thread.cc
src/core/: facenet.cc  model_manager.cc  postprocess.cc  yolov8_face.cc
src/database/: attendance_dao.cc  database_manager.cc  face_feature_dao.cc  user_dao.cc
src/hardware/: camera_device.cpp
src/service/: attendance_service.cc  feature_library.cc
tools/: 数据库工具使用.md
tools/db_tool/: CMakeLists.txt  build.sh  db_tool.cc
